--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,50 @@
     background-color: black;
 }
 
+/* Nasconde le barre di scorrimento per Webkit e IE */
+/* Nasconde le barre di scorrimento per Webkit (Chrome, Safari) */
+body::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+/* Nasconde le barre di scorrimento per Firefox */
+body {
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+/* Nasconde le barre di scorrimento per IE e Edge */
+body {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+}
+
+/* Assicura che il contenuto possa ancora essere scorrevole */
+html,
+body {
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+::-ms-overflow-style {
+    scrollbar-width: none;
+}
+
+.none {
+    display: none;
+}
+
 .navContainer {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
     width: 100%;
     height: 10vh;
     background-color: rgb(0, 0, 0);
@@ -14,6 +57,7 @@
 
     nav {
         height: 100%;
+
     }
 
     ul {
@@ -26,13 +70,22 @@
         list-style-type: none;
 
         li {
+            .titleLink {
+                color: inherit;
+                text-decoration: none;
+            }
+
             i {
                 font-size: 1.6rem;
             }
 
             span {
-                font-weight: 600;
+                font-weight: 100;
                 font-size: 1.4rem;
+                span {
+                    font-weight: 400;
+                }
+
                 sup {
                     font-weight: 100;
                 }
@@ -44,6 +97,7 @@
 .hiddenLinkContainer {
     width: 100%;
     height: 90vh;
+    margin-top: 10vh;
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
@@ -71,7 +125,7 @@
                 background-color: transparent;
 
             }
-            
+
 
         }
     }
@@ -107,6 +161,7 @@
 .containerBanner {
     height: 40vh;
     width: 100%;
+    padding-left: 1rem;
 
     h2 {
         color: white;
@@ -118,11 +173,14 @@
         flex-direction: column;
         padding: 0 1rem;
         font-size: 3rem;
+        font-weight: 400;
         line-height: 3.2rem;
 
         span {
             background-color: transparent;
             padding-bottom: 2rem;
+            font-weight: 100;
+            letter-spacing: 1px;
 
         }
 
@@ -131,7 +189,7 @@
 
 .containerVideoBanner {
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     background-color: #fff;
 
     video {
@@ -145,6 +203,8 @@
 .containerFeaturedWork {
     color: white;
     width: 100%;
+
+
     .containerTopFeatWork {
         display: flex;
         justify-content: space-between;
@@ -154,60 +214,468 @@
         margin: 0 auto;
 
         h2 {
-            font-size: 1.8rem;
+            font-size: 2.6rem;
+            font-weight: 300;
+            padding-left: 1rem;
         }
-        
+
         a {
             border: .1px solid white;
             border-radius: 2rem;
             padding: 1rem 2rem;
+            color: inherit;
+            text-decoration: none;
         }
     }
+
     // ------------------------
     .containerFeaturedWorkSlider {
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
         overflow-x: scroll;
-        height: 65vh;
         gap: 1rem;
         padding: 0 1rem;
-        
-        
-        
-        
+
+
+
+
         .FeatWorkCards {
-            min-width: 80%;
             height: 100%;
             display: flex;
+            border-radius: 2rem;
             flex-direction: column;
             justify-content: flex-end;
-            img {
+            position: relative;
+
+
+
+            .FeatWorkCardsImgCont {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 border-radius: 1rem;
+                overflow: hidden;
 
             }
+
             h3 {
                 padding: 1rem .2rem .4rem;
             }
         }
     }
 }
+
 // ------------------------
 .containerCollaboration {
     color: white;
     width: 90%;
-    padding: 5rem 0 0rem;
+    padding: 5rem 0 3rem;
     margin: 0 auto;
 
     h2 {
         font-size: 2.3rem;
+        font-weight: 300;
     }
 }
-#app {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: #2c3e50;
-  }
+
+.contenitorCollabBottomDescription {
+    color: white;
+    width: 90%;
+    padding: 5rem 0 3rem;
+    margin: 0 auto;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    p {
+        font-weight: 100;
+        letter-spacing: 2px;
+        font-size: 1rem;
+    }
+
+    .contenitorUnderCollabBottomDescription {
+        padding: 2rem 0 0;
+        display: flex;
+        align-items: center;
+
+        i {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #2b2d2e;
+        }
+
+        span {
+            padding: 0 1rem;
+            font-weight: 100;
+            letter-spacing: 1px;
+        }
+    }
+}
+
+.sectionWhatsOnBoard {
+    width: 95%;
+    margin: 0 auto;
+    color: white;
+
+    h3 {
+        font-size: 2.5rem;
+        padding: 3rem 1rem;
+        font-weight: 300;
+        letter-spacing: 1px;
+    }
+
+
+    .sectionWhatsOnBoardComponents {
+        color: white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .sectionWhatsOnBoardComponentsPro {
+            border-radius: 50%;
+            padding: .5rem;
+            color: gold;
+        }
+
+        h5 {
+            font-size: 2.5rem;
+            padding: .3rem 0;
+            font-weight: 600;
+        }
+    }
+}
+
+.footerContainerHomePage {
+    color: white;
+    width: 90%;
+    font-size: 7rem;
+    margin: 0 auto;
+    text-align: center;
+    padding: 2rem 0 0;
+    border-bottom: .2px solid rgba(128, 128, 128, 0.603);
+
+    sub {
+        font-weight: 100;
+        font-size: 4rem;
+    }
+}
+
+.containerBottomFooterHomePge {
+    width: 90%;
+    margin: 0 auto;
+    padding: .5rem 0;
+    color: rgba(142, 141, 141, 0.659);
+}
+
+.containerBannerContacts {
+    height: 15vh;
+    width: 90%;
+    border-bottom: 1px solid gray;
+    padding-bottom: 2.5rem;
+    margin: 10vh auto 0;
+
+
+    h2 {
+        color: white;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-end;
+        padding: 0 1rem;
+        font-size: 3rem;
+        line-height: 3.2rem;
+        display: flex;
+        align-items: flex-end;
+        padding-bottom: .5rem;
+
+        span {
+            background-color: transparent;
+            padding-left: 1rem;
+            font-weight: 100;
+
+        }
+
+    }
+}
+
+.containerMailBooking {
+    color: #fff;
+    border-bottom: 1px solid gray;
+    padding: 1rem;
+    width: 90%;
+    margin: 0 auto;
+
+    h4 {
+        font-weight: 100;
+        padding: 0 0 2rem 0;
+    }
+
+    a {
+        color: inherit;
+        text-decoration: none;
+        font-size: 1.5rem;
+    }
+}
+
+.containerMailCareers {
+    color: #fff;
+    padding: 1rem;
+    width: 90%;
+    margin: 0 auto;
+
+    h4 {
+        font-weight: 100;
+        padding: 0 0 2rem 0;
+    }
+
+    a {
+        color: inherit;
+        text-decoration: none;
+        font-size: 1.5rem;
+    }
+}
+
+.containerPortfolioBannerTitle {
+    color: white;
+    height: 15vh;
+    width: 90%;
+    margin: 10vh auto 4vh;
+    display: flex;
+    align-items: flex-end;
+
+    h1 {
+        font-size: 4rem;
+
+        sub {
+            font-weight: 100;
+            font-size: 2rem;
+        }
+    }
+
+
+}
+
+.PortfolioBannerPills {
+    color: #fff;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    overflow-x: scroll;
+    gap: 1rem;
+    padding: 0 1rem;
+
+    div {
+        h5 {
+            width: 30vw;
+            text-align: center;
+            border: .1px solid white;
+            padding: .5rem 1rem;
+            border-radius: 2rem;
+        }
+    }
+
+}
+
+.word-sliderContact {
+    font-size: 2.5rem;
+    display: flex;
+    align-items: flex-end;
+}
+
+
+.FeatWorkCardsTxtCont {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #98848443;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 2rem;
+
+    h3 {
+        background-color: transparent;
+        font-size: 3rem;
+    }
+
+    p {
+        background-color: transparent;
+    }
+}
+
+.CardWhatsOnBoardContainer {
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    border-radius: 2rem;
+    
+
+    .PremiumCardWhatsOnBoardContainer {
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: #3a709c;
+        height: 60vh;
+        border-radius: 2rem;
+        padding: 1rem;
+        .containerTxtfreeCardWhatsOnBoard {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            width: 100%;
+            background-color: transparent;
+
+            i {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #e1e7f0;
+                color: #3a709c;
+            }
+
+            span {
+                background-color: transparent;
+                padding: 0 1rem;
+                font-weight: 100;
+                letter-spacing: 1px;
+                font-size: 1.2rem;
+                color: #e1e7f0;
+            }
+        }
+        .containerTxtfreeCardWhatsOnBoardClosed {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            background-color: transparent;
+            i {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #e1e7f0;
+                color: #3a709c;
+
+                
+            }
+        }
+
+    }
+
+    .freeCardWhatsOnBoardContainer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #e1e7f0;
+        height: 60vh;
+        border-radius: 2rem;
+        padding: 1rem;
+
+
+        .containerTxtfreeCardWhatsOnBoard {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 100%;
+            background-color: transparent;
+
+            i {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #3a709c;
+            }
+
+            span {
+                background-color: transparent;
+                padding: 0 1rem;
+                font-weight: 100;
+                letter-spacing: 1px;
+                font-size: 1.2rem;
+                color: rgb(13, 13, 63);
+            }
+        }
+        .containerTxtfreeCardWhatsOnBoardClosed {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            background-color: transparent;
+            i {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #3a709c;
+
+                
+            }
+        }
+    }
+
+}
+
+.alessio {
+    width: 70%;
+    transition: .5s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.antonio {
+    width: 30%;
+    transition: .5s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+
+}
+.ContainerWhatsOnBoardDiscover {
+    display: flex;
+    align-items: center;
+    padding: 2rem 0;
+    width: 90%;
+    margin: 0 auto;
+
+    span {
+        background-color: transparent;
+        padding-right: 1rem;
+        font-weight: 100;
+        letter-spacing: 1px;
+    }
+    i {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: #2b2d2e;
+    }
+}
