--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -356,7 +356,7 @@ body {
 .footerContainerHomePage {
     color: white;
     width: 90%;
-    font-size: 7rem;
+    font-size: 20vw;
     margin: 0 auto;
     text-align: center;
     padding: 2rem 0 0;
@@ -391,7 +391,7 @@ body {
         justify-content: flex-start;
         align-items: flex-end;
         padding: 0 1rem;
-        font-size: 3rem;
+        font-size: 9vw;
         line-height: 3.2rem;
         display: flex;
         align-items: flex-end;
@@ -401,6 +401,8 @@ body {
             background-color: transparent;
             padding-left: 1rem;
             font-weight: 100;
+            font-size: 9vw;
+
 
         }
 
@@ -422,7 +424,7 @@ body {
     a {
         color: inherit;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 6vw;
     }
 }
 
@@ -440,7 +442,7 @@ body {
     a {
         color: inherit;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 6vw;
     }
 }
 
